[package]
name = "nsis-plugin"
version = "0.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Threading",
]
